# SitzungsterminBot

./: Cargo.toml  rustfmt.toml
migrations/: 20240828120745_initial.sql
src/: chat_list.rs  court.rs  court_manager.rs  court_map.rs  database.rs  main.rs  messages.rs  reply_queue.rs  scraper.rs
src/court/: database.rs  database_sql.rs
src/courts/: mod.rs  worker.rs
src/messages/: markdown_string.rs
