[package]
name = "sitzungsterminbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "now", "serde"] }
chrono-tz = "0.9"
env_logger = "0.11"
log = "0.4"
redis = { version = "0.26", default-features = false, features = ["keep-alive", "tokio-comp", "json"] }
regex = "1.10"
reqwest = "0.12"
scraper = { version = "0.20", default-features = false, features = ["errors"] }
serde = "1"
serde_json = "*"
shlex = "1.3"
teloxide = { version = "0.13", features = ["macros"] }
thiserror="1"
tokio = { version = "1.39", features = ["rt", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
